--- a/styles/style.css
+++ b/styles/style.css
@@ -370,7 +370,7 @@ hr {
 }
 
 .cart-quantity {
-  width: 30%;
+  width: 20%;
 }
 
 .cart-item-title {
@@ -789,11 +789,12 @@ footer {
     width: 25%;
   }
   .cart-price {
+    margin-left: 5%;
     width: 30%;
-    font-size: 1.2em;
+    font-size: 1.4em;
   }
   .cart-quantity {
-    width: 30%;
+    width: 20%;
   }
 
 
