--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 
 :root {
   /* colors */
-  --primary-color: #0078b7;
+  --primary-color: #1274ba;
   --second-color: #ffcc00;
   /* hover colors */
-  --primary-color-hover: #0090dd;
+  --primary-color-hover: #315baa;
   --second-color-hover: #e2b500;
 }
 
